# Sonic-Mania-Decompilation

./: README.md
SonicMania/: GameLink.h
SonicMania/Objects/UFO/: UFO_HUD.c
wiiu/: CMakeLists.txt
wiiu/sd_card_data/RSDK/v5/: Settings.ini
wiiu/sd_card_data/wiiu/apps/SonicMania/: meta.xml
